--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
                         <span class="typed-command">cat mission.txt</span>
                     </div>
                     <div class="command-output highlight-box">
-                        <p>I architect systems that don't page you at 3 AM.</p>
-                        <p>Building scalable infrastructure with 99.9% uptime,</p>
-                        <p>50% cost reduction, and 60% latency improvements.</p>
+                        <p>I build reliable, scalable systems</p> 
+                        <p>that optimize uptime, performance, and cost.</p>
                     </div>
                     <div class="command-line">
                         <span class="prompt-user">harish@server</span><span class="prompt-separator">:</span><span class="prompt-path">~</span><span class="prompt-symbol">$</span>
